--- a/src/blog/templates/blog/includes/comments.html
+++ b/src/blog/templates/blog/includes/comments.html
@@ -9,11 +9,11 @@
 
     {% if user.is_authenticated %}
 
-    <form id="commentForm" class="mt-8" method="post">
+    <form id="commentForm" class="mt-8">
+
         <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}" />
-
         <input type="hidden" name="post" value="{{ page.id }}" />
-
+        <input type="hidden" name="id" value="" />
         <input type="hidden" id="parentCommentId" name="parent_comment" value="" />
 
         <small class="text-gray-500">You are commenting as
@@ -124,7 +124,7 @@
 
         const body = document.createElement("p");
         body.classList.add("mt-2", "prose");
-        body.innerHTML = comment.body;
+        body.innerHTML = comment.rendered_body;
         li.appendChild(body);
 
         const likeButton = document.createElement("button");
@@ -146,6 +146,28 @@
             });
         });
         li.appendChild(likeButton);
+
+        const editButton = document.createElement("button");
+        editButton.classList.add(
+            "absolute",
+            "top-2",
+            "right-16",
+            "text-blue-500",
+            "hover:text-blue-700",
+            "hover:underline",
+            "transition-colors",
+        );
+        editButton.textContent = "Edit";
+        editButton.addEventListener("click", function () {
+            document.getElementById("commentBody").value = comment.body;
+            document.getElementById("commentForm").querySelector('input[name="id"]').value = comment.id;
+            document.getElementById("parentCommentId").value = comment.parent_comment || "";
+            document.getElementById("replyingTo").textContent = "";
+            document.getElementById("replyingToContainer").classList.add("hidden");
+            document.getElementById("replyingToContainer").classList.remove("block");
+            document.getElementById("commentBody").focus();
+        });
+        li.appendChild(editButton);
 
         const deleteButton = document.createElement("button");
         deleteButton.classList.add(
@@ -181,10 +203,9 @@
             );
             replyButton.textContent = "Reply";
             replyButton.addEventListener("click", function () {
-                document.getElementById("commentBody").value = `@${comment.author_details.username} `;
                 document.getElementById("commentBody").focus();
                 document.getElementById("parentCommentId").value = comment.id;
-                document.getElementById("replyingTo").innerHTML = `@${comment.author_details.username} - ${comment.body}`;
+                document.getElementById("replyingTo").innerHTML = `@${comment.author_details.username} - ${comment.rendered_body}`;
                 document.getElementById("replyingToContainer").classList.remove("hidden");
                 document.getElementById("replyingToContainer").classList.add("block");
                 document.getElementById("commentBody").focus();
@@ -209,13 +230,37 @@
             .forEach((comment) => renderSingleComment(comment, null));
     }
 
+    function resetForm() {
+        document.getElementById("commentForm").reset();
+        document.getElementById("commentForm").querySelector('input[name="id"]').value = "";
+        document.getElementById("parentCommentId").value = "";
+        document.getElementById("replyingToContainer").classList.add("hidden");
+        document.getElementById("replyingToContainer").classList.remove("block");
+        document.getElementById("replyingTo").textContent = "";
+    }
+
     const onCommentFormSubmit = function (event) {
         event.preventDefault();
         const form = document.getElementById("commentForm");
         const formData = new FormData(form);
-        fetch("/blog/api/comments/", {
-            method: "POST",
+
+        // check if the comment is new or an edit
+        const commentId = form.querySelector('input[name="id"]').value;
+
+        const url = commentId
+            ? `/blog/api/comments/${commentId}/`
+            : "/blog/api/comments/";
+
+        const method = commentId ? "PUT" : "POST";
+
+        fetch(url, {
+            method: method,
             body: formData,
+            headers: {
+                "X-CSRFToken": document.querySelector(
+                    'input[name="csrfmiddlewaretoken"]',
+                ).value,
+            },
         })
             .then(async (response) => {
                 if (response.status >= 400) {
@@ -224,11 +269,7 @@
                 }
 
                 // reset the form
-                form.reset();
-                document.getElementById("parentCommentId").value = "";
-                document.getElementById("replyingToContainer").classList.add("hidden");
-                document.getElementById("replyingToContainer").classList.remove("block");
-                document.getElementById("replyingTo").textContent = "";
+                resetForm();
 
                 return response.json();
             })
