feat: Create reply connectors

--- a/src/blog/templates/blog/includes/comments.html
+++ b/src/blog/templates/blog/includes/comments.html
@@ -219,10 +219,50 @@
             li.appendChild(replyButton);
         }
 
+        // add border on the left side to indicate the level
+        if (parent) {
+            const borderVertical = document.createElement("div");
+            borderVertical.classList.add(
+                "absolute",
+                "-top-4",
+                "-left-3",
+                "bg-gray-300",
+                "w-0.5",
+                "rounded-b-full",
+            );
+
+            const isLast = parent.replies[parent.replies.length - 1].id === comment.id;
+
+            if (isLast) {
+                borderVertical.classList.add(
+                    "bottom-1/2",
+                )
+            } else {
+                borderVertical.classList.add(
+                    "bottom-0",
+                )
+            }
+
+            li.appendChild(borderVertical);
+
+            const borderHorizontal = document.createElement("div");
+            borderHorizontal.classList.add(
+                "absolute",
+                "top-1/2",
+                "-left-3",
+                "bg-gray-300",
+                "w-3",
+                "h-0.5",
+                "skew-y-12",
+                "rounded-l-full",
+            );
+
+            li.appendChild(borderHorizontal);
+        }
+
         commentsList.appendChild(li);
 
         if (comment.replies.length > 0) {
-            console.log("rendering replies")
             comment.replies.forEach((reply) => renderSingleComment(reply, comment));
         }
     }
@@ -279,8 +319,6 @@
                 return response.json();
             })
             .then((data) => {
-
-                console.log({ data })
                 const commentId = data.id;
 
                 fetchComments().then((data) => {
