feat: Edit profile

--- a/src/brazil_blog/templates/allauth/layouts/base.html
+++ b/src/brazil_blog/templates/allauth/layouts/base.html
@@ -17,7 +17,6 @@
         {% block body %}
             <div class="p-4 sm:py-8">
                 <div class="bg-white rounded-xl w-full block drop-shadow p-4 mx-auto prose">
-                    
             {% if messages %}
                 <div>
                     <strong>{% trans "Messages:" %}</strong>
@@ -32,6 +31,9 @@
                     {% if user.is_authenticated %}
                         <li class="pl-0">
                             <a class="inline-block text-blue-500 hover:text-blue-700 transition-colors" href="{% url 'account_email' %}">{% trans "Change Email" %}</a>
+                        </li>
+                        <li class="pl-0">
+                            <a class="inline-block text-blue-500 hover:text-blue-700 transition-colors" href="{% url 'account_profile' %}">{% trans "Edit Profile" %}</a>
                         </li>
                         <li class="pl-0">
                             <a class="inline-block text-blue-500 hover:text-blue-700 transition-colors" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
