Refactor: Update profile and header links
Update the profile link in the base.html file to point to the 'edit_profile' URL with the username parameter. Also, update the header.html file to change the 'Change Email' link to 'Account' and add a new link to the user's profile page.

--- a/src/brazil_blog/templates/allauth/layouts/base.html
+++ b/src/brazil_blog/templates/allauth/layouts/base.html
@@ -33,7 +33,7 @@
                             <a class="inline-block text-blue-500 hover:text-blue-700 transition-colors" href="{% url 'account_email' %}">{% trans "Change Email" %}</a>
                         </li>
                         <li class="pl-0">
-                            <a class="inline-block text-blue-500 hover:text-blue-700 transition-colors" href="{% url 'account_profile' %}">{% trans "Edit Profile" %}</a>
+                            <a class="inline-block text-blue-500 hover:text-blue-700 transition-colors" href="{% url 'edit_profile' username=user.username %}">{% trans "Edit Profile" %}</a>
                         </li>
                         <li class="pl-0">
                             <a class="inline-block text-blue-500 hover:text-blue-700 transition-colors" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
