refactor: Add min height to profile

--- a/src/brazil_blog/static/css/brazil_blog_compiled.css
+++ b/src/brazil_blog/static/css/brazil_blog_compiled.css
@@ -1602,6 +1602,14 @@ select {
   min-height: 16rem;
 }
 
+.min-h-96 {
+  min-height: 24rem;
+}
+
+.min-h-48 {
+  min-height: 12rem;
+}
+
 .w-0 {
   width: 0px;
 }
