--- a/src/brazil_blog/templates/profile.html
+++ b/src/brazil_blog/templates/profile.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="bg-green-700 py-8 flex-grow">
-    <div class="bg-white rounded-xl w-full block drop-shadow p-4 mx-auto prose">
+    <div class="bg-white rounded-xl min-h-48 w-full block drop-shadow p-4 mx-auto prose">
         {% if avatar %}
             <img src="{{ avatar }}" alt="Profile Picture" class="float-left rounded-full w-24 h-24 mr-4 object-cover" />
         {% else %}
